src/MFL/MFL/Par.info
-----------------------------------------------------------------------------
Info file generated by Happy Version 1.19.12 from MFL/Par.y
-----------------------------------------------------------------------------


-----------------------------------------------------------------------------
Grammar
-----------------------------------------------------------------------------
	%start_pSCPL_internal -> SCPL                      (0)
	%start_pListDefn_internal -> ListDefn              (1)
	%start_pDefn_internal -> Defn                      (2)
	%start_pStmt2_internal -> Stmt2                    (3)
	%start_pLet_internal -> Let                        (4)
	%start_pStmt1_internal -> Stmt1                    (5)
	%start_pCaseTerm_internal -> CaseTerm              (6)
	%start_pLetInStmt_internal -> LetInStmt            (7)
	%start_pType_internal -> Type                      (8)
	%start_pTypeN_internal -> TypeN                    (9)
	%start_pListTypeN_internal -> ListTypeN            (10)
	%start_pListType_internal -> ListType              (11)
	%start_pListUIdent_internal -> ListUIdent          (12)
	%start_pCasePattern_internal -> CasePattern        (13)
	%start_pListCaseTerm_internal -> ListCaseTerm      (14)
	%start_pExp15_internal -> Exp15                    (15)
	%start_pExp13_internal -> Exp13                    (16)
	%start_pExp12_internal -> Exp12                    (17)
	%start_pExp11_internal -> Exp11                    (18)
	%start_pExp9_internal -> Exp9                      (19)
	%start_pExp8_internal -> Exp8                      (20)
	%start_pExp4_internal -> Exp4                      (21)
	%start_pExp3_internal -> Exp3                      (22)
	%start_pExp1_internal -> Exp1                      (23)
	%start_pListPIdent_internal -> ListPIdent          (24)
	%start_pTypeAnnotation_internal -> TypeAnnotation   (25)
	%start_pExp_internal -> Exp                        (26)
	%start_pExp2_internal -> Exp2                      (27)
	%start_pExp5_internal -> Exp5                      (28)
	%start_pExp6_internal -> Exp6                      (29)
	%start_pExp7_internal -> Exp7                      (30)
	%start_pExp10_internal -> Exp10                    (31)
	%start_pExp14_internal -> Exp14                    (32)
	%start_pListExp_internal -> ListExp                (33)
	%start_pConstantType_internal -> ConstantType      (34)
	Char -> L_charac                                   (35)
	Double -> L_doubl                                  (36)
	String -> L_quoted                                 (37)
	TokUnit -> L_TokUnit                               (38)
	UIdent -> L_UIdent                                 (39)
	PIdent -> L_PIdent                                 (40)
	PInteger -> L_PInteger                             (41)
	SCPL -> ListDefn                                   (42)
	ListDefn -> Defn                                   (43)
	ListDefn -> Defn ListDefn                          (44)
	Defn -> PIdent '=' Stmt1                           (45)
	Stmt2 -> 'case' Exp 'of' '{' ListCaseTerm '}'      (46)
	Stmt2 -> 'if' Exp 'then' Stmt2 'else' Stmt2        (47)
	Stmt2 -> Exp                                       (48)
	Let -> 'let'                                       (49)
	Let -> 'letrec'                                    (50)
	Stmt1 -> Let LetInStmt 'in' Stmt1                  (51)
	Stmt1 -> Stmt2                                     (52)
	CaseTerm -> CasePattern '->' Stmt1                 (53)
	LetInStmt -> PIdent '=' Exp                        (54)
	Type -> TypeN '->' Type                            (55)
	Type -> TypeN                                      (56)
	TypeN -> TokUnit                                   (57)
	TypeN -> UIdent                                    (58)
	TypeN -> '[' Type ']'                              (59)
	TypeN -> '<' ListType '>'                          (60)
	TypeN -> '(' Type ')'                              (61)
	TypeN -> ConstantType                              (62)
	ListTypeN ->                                       (63)
	ListTypeN -> TypeN                                 (64)
	ListTypeN -> TypeN ',' ListTypeN                   (65)
	ListType -> Type                                   (66)
	ListType -> Type ',' ListType                      (67)
	ListUIdent ->                                      (68)
	ListUIdent -> UIdent                               (69)
	ListUIdent -> UIdent ',' ListUIdent                (70)
	CasePattern -> 'True'                              (71)
	CasePattern -> 'False'                             (72)
	ListCaseTerm -> CaseTerm                           (73)
	ListCaseTerm -> CaseTerm ';' ListCaseTerm          (74)
	Exp15 -> PInteger                                  (75)
	Exp15 -> 'True'                                    (76)
	Exp15 -> 'False'                                   (77)
	Exp15 -> PIdent                                    (78)
	Exp15 -> String                                    (79)
	Exp15 -> '[' ListExp ']'                           (80)
	Exp15 -> PIdent '(' ListExp ')'                    (81)
	Exp15 -> '(' Exp ')'                               (82)
	Exp13 -> '-' Exp14                                 (83)
	Exp13 -> Exp13 ':' Exp14                           (84)
	Exp13 -> Exp14                                     (85)
	Exp12 -> Exp12 '++' Exp13                          (86)
	Exp12 -> Exp12 '*' Exp13                           (87)
	Exp12 -> Exp12 '/' Exp13                           (88)
	Exp12 -> Exp13                                     (89)
	Exp11 -> Exp11 '+' Exp12                           (90)
	Exp11 -> Exp11 '-' Exp12                           (91)
	Exp11 -> Exp12                                     (92)
	Exp9 -> Exp9 '<' Exp10                             (93)
	Exp9 -> Exp9 '>' Exp10                             (94)
	Exp9 -> Exp9 '<=' Exp10                            (95)
	Exp9 -> Exp9 '>=' Exp10                            (96)
	Exp9 -> Exp10                                      (97)
	Exp8 -> Exp8 '==' Exp9                             (98)
	Exp8 -> Exp8 '!=' Exp9                             (99)
	Exp8 -> Exp9                                       (100)
	Exp4 -> Exp4 '&&' Exp5                             (101)
	Exp4 -> Exp5                                       (102)
	Exp3 -> Exp3 '||' Exp4                             (103)
	Exp3 -> Exp4                                       (104)
	Exp1 -> '\\' ListPIdent '->' Stmt1                 (105)
	Exp1 -> Exp2                                       (106)
	ListPIdent -> PIdent                               (107)
	ListPIdent -> PIdent ListPIdent                    (108)
	TypeAnnotation -> '::' Type                        (109)
	TypeAnnotation ->                                  (110)
	Exp -> Exp1                                        (111)
	Exp2 -> Exp3                                       (112)
	Exp5 -> Exp6                                       (113)
	Exp6 -> Exp7                                       (114)
	Exp7 -> Exp8                                       (115)
	Exp10 -> Exp11                                     (116)
	Exp14 -> Exp15                                     (117)
	ListExp ->                                         (118)
	ListExp -> Exp                                     (119)
	ListExp -> Exp ',' ListExp                         (120)
	ConstantType -> PInteger                           (121)
	ConstantType -> String                             (122)
	ConstantType -> Char                               (123)
	ConstantType -> Double                             (124)

-----------------------------------------------------------------------------
Terminals
-----------------------------------------------------------------------------
	'!='           { PT _ (TS _ 1) }
	'&&'           { PT _ (TS _ 2) }
	'('            { PT _ (TS _ 3) }
	')'            { PT _ (TS _ 4) }
	'*'            { PT _ (TS _ 5) }
	'+'            { PT _ (TS _ 6) }
	'++'           { PT _ (TS _ 7) }
	','            { PT _ (TS _ 8) }
	'-'            { PT _ (TS _ 9) }
	'->'           { PT _ (TS _ 10) }
	'/'            { PT _ (TS _ 11) }
	':'            { PT _ (TS _ 12) }
	'::'           { PT _ (TS _ 13) }
	';'            { PT _ (TS _ 14) }
	'<'            { PT _ (TS _ 15) }
	'<='           { PT _ (TS _ 16) }
	'='            { PT _ (TS _ 17) }
	'=='           { PT _ (TS _ 18) }
	'>'            { PT _ (TS _ 19) }
	'>='           { PT _ (TS _ 20) }
	'False'        { PT _ (TS _ 21) }
	'True'         { PT _ (TS _ 22) }
	'['            { PT _ (TS _ 23) }
	'\\'           { PT _ (TS _ 24) }
	']'            { PT _ (TS _ 25) }
	'case'         { PT _ (TS _ 26) }
	'else'         { PT _ (TS _ 27) }
	'if'           { PT _ (TS _ 28) }
	'in'           { PT _ (TS _ 29) }
	'let'          { PT _ (TS _ 30) }
	'letrec'       { PT _ (TS _ 31) }
	'of'           { PT _ (TS _ 32) }
	'then'         { PT _ (TS _ 33) }
	'{'            { PT _ (TS _ 34) }
	'||'           { PT _ (TS _ 35) }
	'}'            { PT _ (TS _ 36) }
	L_charac       { PT _ (TC _) }
	L_doubl        { PT _ (TD _) }
	L_quoted       { PT _ (TL _) }
	L_TokUnit      { PT _ (T_TokUnit _) }
	L_UIdent       { PT _ (T_UIdent _) }
	L_PIdent       { PT _ (T_PIdent _) }
	L_PInteger     { PT _ (T_PInteger _) }

-----------------------------------------------------------------------------
Non-terminals
-----------------------------------------------------------------------------
	%start_pSCPL_internal rule  0
	%start_pListDefn_internal rule  1
	%start_pDefn_internal rule  2
	%start_pStmt2_internal rule  3
	%start_pLet_internal rule  4
	%start_pStmt1_internal rule  5
	%start_pCaseTerm_internal rule  6
	%start_pLetInStmt_internal rule  7
	%start_pType_internal rule  8
	%start_pTypeN_internal rule  9
	%start_pListTypeN_internal rule  10
	%start_pListType_internal rule  11
	%start_pListUIdent_internal rule  12
	%start_pCasePattern_internal rule  13
	%start_pListCaseTerm_internal rule  14
	%start_pExp15_internal rule  15
	%start_pExp13_internal rule  16
	%start_pExp12_internal rule  17
	%start_pExp11_internal rule  18
	%start_pExp9_internal rule  19
	%start_pExp8_internal rule  20
	%start_pExp4_internal rule  21
	%start_pExp3_internal rule  22
	%start_pExp1_internal rule  23
	%start_pListPIdent_internal rule  24
	%start_pTypeAnnotation_internal rule  25
	%start_pExp_internal rule  26
	%start_pExp2_internal rule  27
	%start_pExp5_internal rule  28
	%start_pExp6_internal rule  29
	%start_pExp7_internal rule  30
	%start_pExp10_internal rule  31
	%start_pExp14_internal rule  32
	%start_pListExp_internal rule  33
	%start_pConstantType_internal rule  34
	Char            rule  35
	Double          rule  36
	String          rule  37
	TokUnit         rule  38
	UIdent          rule  39
	PIdent          rule  40
	PInteger        rule  41
	SCPL            rule  42
	ListDefn        rules 43, 44
	Defn            rule  45
	Stmt2           rules 46, 47, 48
	Let             rules 49, 50
	Stmt1           rules 51, 52
	CaseTerm        rule  53
	LetInStmt       rule  54
	Type            rules 55, 56
	TypeN           rules 57, 58, 59, 60, 61, 62
	ListTypeN       rules 63, 64, 65
	ListType        rules 66, 67
	ListUIdent      rules 68, 69, 70
	CasePattern     rules 71, 72
	ListCaseTerm    rules 73, 74
	Exp15           rules 75, 76, 77, 78, 79, 80, 81, 82
	Exp13           rules 83, 84, 85
	Exp12           rules 86, 87, 88, 89
	Exp11           rules 90, 91, 92
	Exp9            rules 93, 94, 95, 96, 97
	Exp8            rules 98, 99, 100
	Exp4            rules 101, 102
	Exp3            rules 103, 104
	Exp1            rules 105, 106
	ListPIdent      rules 107, 108
	TypeAnnotation  rules 109, 110
	Exp             rule  111
	Exp2            rule  112
	Exp5            rule  113
	Exp6            rule  114
	Exp7            rule  115
	Exp10           rule  116
	Exp14           rule  117
	ListExp         rules 118, 119, 120
	ConstantType    rules 121, 122, 123, 124

-----------------------------------------------------------------------------
States
-----------------------------------------------------------------------------
State 0


	L_PIdent       shift, and enter state 71

	PIdent         goto state 128
	SCPL           goto state 132
	ListDefn       goto state 133
	Defn           goto state 131

State 1


	L_PIdent       shift, and enter state 71

	PIdent         goto state 128
	ListDefn       goto state 130
	Defn           goto state 131

State 2


	L_PIdent       shift, and enter state 71

	PIdent         goto state 128
	Defn           goto state 129

State 3


	'('            shift, and enter state 65
	'-'            shift, and enter state 66
	'False'        shift, and enter state 67
	'True'         shift, and enter state 68
	'['            shift, and enter state 69
	'\\'           shift, and enter state 70
	'case'         shift, and enter state 122
	'if'           shift, and enter state 123
	L_quoted       shift, and enter state 43
	L_PIdent       shift, and enter state 71
	L_PInteger     shift, and enter state 44

	String         goto state 45
	PIdent         goto state 46
	PInteger       goto state 47
	Stmt2          goto state 127
	Exp15          goto state 48
	Exp13          goto state 49
	Exp12          goto state 50
	Exp11          goto state 51
	Exp9           goto state 52
	Exp8           goto state 53
	Exp4           goto state 54
	Exp3           goto state 55
	Exp1           goto state 56
	Exp            goto state 121
	Exp2           goto state 58
	Exp5           goto state 59
	Exp6           goto state 60
	Exp7           goto state 61
	Exp10          goto state 62
	Exp14          goto state 63

State 4


	'let'          shift, and enter state 124
	'letrec'       shift, and enter state 125

	Let            goto state 126

State 5


	'('            shift, and enter state 65
	'-'            shift, and enter state 66
	'False'        shift, and enter state 67
	'True'         shift, and enter state 68
	'['            shift, and enter state 69
	'\\'           shift, and enter state 70
	'case'         shift, and enter state 122
	'if'           shift, and enter state 123
	'let'          shift, and enter state 124
	'letrec'       shift, and enter state 125
	L_quoted       shift, and enter state 43
	L_PIdent       shift, and enter state 71
	L_PInteger     shift, and enter state 44

	String         goto state 45
	PIdent         goto state 46
	PInteger       goto state 47
	Stmt2          goto state 118
	Let            goto state 119
	Stmt1          goto state 120
	Exp15          goto state 48
	Exp13          goto state 49
	Exp12          goto state 50
	Exp11          goto state 51
	Exp9           goto state 52
	Exp8           goto state 53
	Exp4           goto state 54
	Exp3           goto state 55
	Exp1           goto state 56
	Exp            goto state 121
	Exp2           goto state 58
	Exp5           goto state 59
	Exp6           goto state 60
	Exp7           goto state 61
	Exp10          goto state 62
	Exp14          goto state 63

State 6


	'False'        shift, and enter state 95
	'True'         shift, and enter state 96

	CaseTerm       goto state 117
	CasePattern    goto state 93

State 7


	L_PIdent       shift, and enter state 71

	PIdent         goto state 115
	LetInStmt      goto state 116

State 8


	'('            shift, and enter state 107
	'<'            shift, and enter state 108
	'['            shift, and enter state 109
	L_charac       shift, and enter state 36
	L_doubl        shift, and enter state 42
	L_quoted       shift, and enter state 43
	L_TokUnit      shift, and enter state 110
	L_UIdent       shift, and enter state 100
	L_PInteger     shift, and enter state 44

	Char           goto state 37
	Double         goto state 38
	String         goto state 39
	TokUnit        goto state 101
	UIdent         goto state 102
	PInteger       goto state 40
	Type           goto state 114
	TypeN          goto state 104
	ConstantType   goto state 106

State 9


	'('            shift, and enter state 107
	'<'            shift, and enter state 108
	'['            shift, and enter state 109
	L_charac       shift, and enter state 36
	L_doubl        shift, and enter state 42
	L_quoted       shift, and enter state 43
	L_TokUnit      shift, and enter state 110
	L_UIdent       shift, and enter state 100
	L_PInteger     shift, and enter state 44

	Char           goto state 37
	Double         goto state 38
	String         goto state 39
	TokUnit        goto state 101
	UIdent         goto state 102
	PInteger       goto state 40
	TypeN          goto state 113
	ConstantType   goto state 106

State 10


	'('            shift, and enter state 107
	'<'            shift, and enter state 108
	'['            shift, and enter state 109
	L_charac       shift, and enter state 36
	L_doubl        shift, and enter state 42
	L_quoted       shift, and enter state 43
	L_TokUnit      shift, and enter state 110
	L_UIdent       shift, and enter state 100
	L_PInteger     shift, and enter state 44
	%eof           reduce using rule 63

	Char           goto state 37
	Double         goto state 38
	String         goto state 39
	TokUnit        goto state 101
	UIdent         goto state 102
	PInteger       goto state 40
	TypeN          goto state 111
	ListTypeN      goto state 112
	ConstantType   goto state 106

State 11


	'('            shift, and enter state 107
	'<'            shift, and enter state 108
	'['            shift, and enter state 109
	L_charac       shift, and enter state 36
	L_doubl        shift, and enter state 42
	L_quoted       shift, and enter state 43
	L_TokUnit      shift, and enter state 110
	L_UIdent       shift, and enter state 100
	L_PInteger     shift, and enter state 44

	Char           goto state 37
	Double         goto state 38
	String         goto state 39
	TokUnit        goto state 101
	UIdent         goto state 102
	PInteger       goto state 40
	Type           goto state 103
	TypeN          goto state 104
	ListType       goto state 105
	ConstantType   goto state 106

State 12


	L_UIdent       shift, and enter state 100
	%eof           reduce using rule 68

	UIdent         goto state 98
	ListUIdent     goto state 99

State 13


	'False'        shift, and enter state 95
	'True'         shift, and enter state 96

	CasePattern    goto state 97

State 14


	'False'        shift, and enter state 95
	'True'         shift, and enter state 96

	CaseTerm       goto state 92
	CasePattern    goto state 93
	ListCaseTerm   goto state 94

State 15


	'('            shift, and enter state 65
	'False'        shift, and enter state 67
	'True'         shift, and enter state 68
	'['            shift, and enter state 69
	L_quoted       shift, and enter state 43
	L_PIdent       shift, and enter state 71
	L_PInteger     shift, and enter state 44

	String         goto state 45
	PIdent         goto state 46
	PInteger       goto state 47
	Exp15          goto state 91

State 16


	'('            shift, and enter state 65
	'-'            shift, and enter state 66
	'False'        shift, and enter state 67
	'True'         shift, and enter state 68
	'['            shift, and enter state 69
	L_quoted       shift, and enter state 43
	L_PIdent       shift, and enter state 71
	L_PInteger     shift, and enter state 44

	String         goto state 45
	PIdent         goto state 46
	PInteger       goto state 47
	Exp15          goto state 48
	Exp13          goto state 90
	Exp14          goto state 63

State 17


	'('            shift, and enter state 65
	'-'            shift, and enter state 66
	'False'        shift, and enter state 67
	'True'         shift, and enter state 68
	'['            shift, and enter state 69
	L_quoted       shift, and enter state 43
	L_PIdent       shift, and enter state 71
	L_PInteger     shift, and enter state 44

	String         goto state 45
	PIdent         goto state 46
	PInteger       goto state 47
	Exp15          goto state 48
	Exp13          goto state 49
	Exp12          goto state 89
	Exp14          goto state 63

State 18


	'('            shift, and enter state 65
	'-'            shift, and enter state 66
	'False'        shift, and enter state 67
	'True'         shift, and enter state 68
	'['            shift, and enter state 69
	L_quoted       shift, and enter state 43
	L_PIdent       shift, and enter state 71
	L_PInteger     shift, and enter state 44

	String         goto state 45
	PIdent         goto state 46
	PInteger       goto state 47
	Exp15          goto state 48
	Exp13          goto state 49
	Exp12          goto state 50
	Exp11          goto state 88
	Exp14          goto state 63

State 19


	'('            shift, and enter state 65
	'-'            shift, and enter state 66
	'False'        shift, and enter state 67
	'True'         shift, and enter state 68
	'['            shift, and enter state 69
	L_quoted       shift, and enter state 43
	L_PIdent       shift, and enter state 71
	L_PInteger     shift, and enter state 44

	String         goto state 45
	PIdent         goto state 46
	PInteger       goto state 47
	Exp15          goto state 48
	Exp13          goto state 49
	Exp12          goto state 50
	Exp11          goto state 51
	Exp9           goto state 87
	Exp10          goto state 62
	Exp14          goto state 63

State 20


	'('            shift, and enter state 65
	'-'            shift, and enter state 66
	'False'        shift, and enter state 67
	'True'         shift, and enter state 68
	'['            shift, and enter state 69
	L_quoted       shift, and enter state 43
	L_PIdent       shift, and enter state 71
	L_PInteger     shift, and enter state 44

	String         goto state 45
	PIdent         goto state 46
	PInteger       goto state 47
	Exp15          goto state 48
	Exp13          goto state 49
	Exp12          goto state 50
	Exp11          goto state 51
	Exp9           goto state 52
	Exp8           goto state 86
	Exp10          goto state 62
	Exp14          goto state 63

State 21


	'('            shift, and enter state 65
	'-'            shift, and enter state 66
	'False'        shift, and enter state 67
	'True'         shift, and enter state 68
	'['            shift, and enter state 69
	L_quoted       shift, and enter state 43
	L_PIdent       shift, and enter state 71
	L_PInteger     shift, and enter state 44

	String         goto state 45
	PIdent         goto state 46
	PInteger       goto state 47
	Exp15          goto state 48
	Exp13          goto state 49
	Exp12          goto state 50
	Exp11          goto state 51
	Exp9           goto state 52
	Exp8           goto state 53
	Exp4           goto state 85
	Exp5           goto state 59
	Exp6           goto state 60
	Exp7           goto state 61
	Exp10          goto state 62
	Exp14          goto state 63

State 22


	'('            shift, and enter state 65
	'-'            shift, and enter state 66
	'False'        shift, and enter state 67
	'True'         shift, and enter state 68
	'['            shift, and enter state 69
	L_quoted       shift, and enter state 43
	L_PIdent       shift, and enter state 71
	L_PInteger     shift, and enter state 44

	String         goto state 45
	PIdent         goto state 46
	PInteger       goto state 47
	Exp15          goto state 48
	Exp13          goto state 49
	Exp12          goto state 50
	Exp11          goto state 51
	Exp9           goto state 52
	Exp8           goto state 53
	Exp4           goto state 54
	Exp3           goto state 84
	Exp5           goto state 59
	Exp6           goto state 60
	Exp7           goto state 61
	Exp10          goto state 62
	Exp14          goto state 63

State 23


	'('            shift, and enter state 65
	'-'            shift, and enter state 66
	'False'        shift, and enter state 67
	'True'         shift, and enter state 68
	'['            shift, and enter state 69
	'\\'           shift, and enter state 70
	L_quoted       shift, and enter state 43
	L_PIdent       shift, and enter state 71
	L_PInteger     shift, and enter state 44

	String         goto state 45
	PIdent         goto state 46
	PInteger       goto state 47
	Exp15          goto state 48
	Exp13          goto state 49
	Exp12          goto state 50
	Exp11          goto state 51
	Exp9           goto state 52
	Exp8           goto state 53
	Exp4           goto state 54
	Exp3           goto state 55
	Exp1           goto state 83
	Exp2           goto state 58
	Exp5           goto state 59
	Exp6           goto state 60
	Exp7           goto state 61
	Exp10          goto state 62
	Exp14          goto state 63

State 24


	L_PIdent       shift, and enter state 71

	PIdent         goto state 81
	ListPIdent     goto state 82

State 25


	'::'           shift, and enter state 80
	%eof           reduce using rule 110

	TypeAnnotation goto state 79

State 26


	'('            shift, and enter state 65
	'-'            shift, and enter state 66
	'False'        shift, and enter state 67
	'True'         shift, and enter state 68
	'['            shift, and enter state 69
	'\\'           shift, and enter state 70
	L_quoted       shift, and enter state 43
	L_PIdent       shift, and enter state 71
	L_PInteger     shift, and enter state 44

	String         goto state 45
	PIdent         goto state 46
	PInteger       goto state 47
	Exp15          goto state 48
	Exp13          goto state 49
	Exp12          goto state 50
	Exp11          goto state 51
	Exp9           goto state 52
	Exp8           goto state 53
	Exp4           goto state 54
	Exp3           goto state 55
	Exp1           goto state 56
	Exp            goto state 78
	Exp2           goto state 58
	Exp5           goto state 59
	Exp6           goto state 60
	Exp7           goto state 61
	Exp10          goto state 62
	Exp14          goto state 63

State 27


	'('            shift, and enter state 65
	'-'            shift, and enter state 66
	'False'        shift, and enter state 67
	'True'         shift, and enter state 68
	'['            shift, and enter state 69
	L_quoted       shift, and enter state 43
	L_PIdent       shift, and enter state 71
	L_PInteger     shift, and enter state 44

	String         goto state 45
	PIdent         goto state 46
	PInteger       goto state 47
	Exp15          goto state 48
	Exp13          goto state 49
	Exp12          goto state 50
	Exp11          goto state 51
	Exp9           goto state 52
	Exp8           goto state 53
	Exp4           goto state 54
	Exp3           goto state 55
	Exp2           goto state 77
	Exp5           goto state 59
	Exp6           goto state 60
	Exp7           goto state 61
	Exp10          goto state 62
	Exp14          goto state 63

State 28


	'('            shift, and enter state 65
	'-'            shift, and enter state 66
	'False'        shift, and enter state 67
	'True'         shift, and enter state 68
	'['            shift, and enter state 69
	L_quoted       shift, and enter state 43
	L_PIdent       shift, and enter state 71
	L_PInteger     shift, and enter state 44

	String         goto state 45
	PIdent         goto state 46
	PInteger       goto state 47
	Exp15          goto state 48
	Exp13          goto state 49
	Exp12          goto state 50
	Exp11          goto state 51
	Exp9           goto state 52
	Exp8           goto state 53
	Exp5           goto state 76
	Exp6           goto state 60
	Exp7           goto state 61
	Exp10          goto state 62
	Exp14          goto state 63

State 29


	'('            shift, and enter state 65
	'-'            shift, and enter state 66
	'False'        shift, and enter state 67
	'True'         shift, and enter state 68
	'['            shift, and enter state 69
	L_quoted       shift, and enter state 43
	L_PIdent       shift, and enter state 71
	L_PInteger     shift, and enter state 44

	String         goto state 45
	PIdent         goto state 46
	PInteger       goto state 47
	Exp15          goto state 48
	Exp13          goto state 49
	Exp12          goto state 50
	Exp11          goto state 51
	Exp9           goto state 52
	Exp8           goto state 53
	Exp6           goto state 75
	Exp7           goto state 61
	Exp10          goto state 62
	Exp14          goto state 63

State 30


	'('            shift, and enter state 65
	'-'            shift, and enter state 66
	'False'        shift, and enter state 67
	'True'         shift, and enter state 68
	'['            shift, and enter state 69
	L_quoted       shift, and enter state 43
	L_PIdent       shift, and enter state 71
	L_PInteger     shift, and enter state 44

	String         goto state 45
	PIdent         goto state 46
	PInteger       goto state 47
	Exp15          goto state 48
	Exp13          goto state 49
	Exp12          goto state 50
	Exp11          goto state 51
	Exp9           goto state 52
	Exp8           goto state 53
	Exp7           goto state 74
	Exp10          goto state 62
	Exp14          goto state 63

State 31


	'('            shift, and enter state 65
	'-'            shift, and enter state 66
	'False'        shift, and enter state 67
	'True'         shift, and enter state 68
	'['            shift, and enter state 69
	L_quoted       shift, and enter state 43
	L_PIdent       shift, and enter state 71
	L_PInteger     shift, and enter state 44

	String         goto state 45
	PIdent         goto state 46
	PInteger       goto state 47
	Exp15          goto state 48
	Exp13          goto state 49
	Exp12          goto state 50
	Exp11          goto state 51
	Exp10          goto state 73
	Exp14          goto state 63

State 32


	'('            shift, and enter state 65
	'False'        shift, and enter state 67
	'True'         shift, and enter state 68
	'['            shift, and enter state 69
	L_quoted       shift, and enter state 43
	L_PIdent       shift, and enter state 71
	L_PInteger     shift, and enter state 44

	String         goto state 45
	PIdent         goto state 46
	PInteger       goto state 47
	Exp15          goto state 48
	Exp14          goto state 72

State 33


	'('            shift, and enter state 65
	'-'            shift, and enter state 66
	'False'        shift, and enter state 67
	'True'         shift, and enter state 68
	'['            shift, and enter state 69
	'\\'           shift, and enter state 70
	L_quoted       shift, and enter state 43
	L_PIdent       shift, and enter state 71
	L_PInteger     shift, and enter state 44
	%eof           reduce using rule 118

	String         goto state 45
	PIdent         goto state 46
	PInteger       goto state 47
	Exp15          goto state 48
	Exp13          goto state 49
	Exp12          goto state 50
	Exp11          goto state 51
	Exp9           goto state 52
	Exp8           goto state 53
	Exp4           goto state 54
	Exp3           goto state 55
	Exp1           goto state 56
	Exp            goto state 57
	Exp2           goto state 58
	Exp5           goto state 59
	Exp6           goto state 60
	Exp7           goto state 61
	Exp10          goto state 62
	Exp14          goto state 63
	ListExp        goto state 64

State 34


	L_charac       shift, and enter state 36
	L_doubl        shift, and enter state 42
	L_quoted       shift, and enter state 43
	L_PInteger     shift, and enter state 44

	Char           goto state 37
	Double         goto state 38
	String         goto state 39
	PInteger       goto state 40
	ConstantType   goto state 41

State 35


	L_charac       shift, and enter state 36


State 36

	Char -> L_charac .                                  (rule 35)

	')'            reduce using rule 35
	','            reduce using rule 35
	'->'           reduce using rule 35
	'>'            reduce using rule 35
	']'            reduce using rule 35
	%eof           reduce using rule 35


State 37

	ConstantType -> Char .                              (rule 123)

	')'            reduce using rule 123
	','            reduce using rule 123
	'->'           reduce using rule 123
	'>'            reduce using rule 123
	']'            reduce using rule 123
	%eof           reduce using rule 123


State 38

	ConstantType -> Double .                            (rule 124)

	')'            reduce using rule 124
	','            reduce using rule 124
	'->'           reduce using rule 124
	'>'            reduce using rule 124
	']'            reduce using rule 124
	%eof           reduce using rule 124


State 39

	ConstantType -> String .                            (rule 122)

	')'            reduce using rule 122
	','            reduce using rule 122
	'->'           reduce using rule 122
	'>'            reduce using rule 122
	']'            reduce using rule 122
	%eof           reduce using rule 122


State 40

	ConstantType -> PInteger .                          (rule 121)

	')'            reduce using rule 121
	','            reduce using rule 121
	'->'           reduce using rule 121
	'>'            reduce using rule 121
	']'            reduce using rule 121
	%eof           reduce using rule 121


State 41

	%start_pConstantType_internal -> ConstantType .     (rule 34)

	%eof           accept


State 42

	Double -> L_doubl .                                 (rule 36)

	')'            reduce using rule 36
	','            reduce using rule 36
	'->'           reduce using rule 36
	'>'            reduce using rule 36
	']'            reduce using rule 36
	%eof           reduce using rule 36


State 43

	String -> L_quoted .                                (rule 37)

	'!='           reduce using rule 37
	'&&'           reduce using rule 37
	')'            reduce using rule 37
	'*'            reduce using rule 37
	'+'            reduce using rule 37
	'++'           reduce using rule 37
	','            reduce using rule 37
	'-'            reduce using rule 37
	'->'           reduce using rule 37
	'/'            reduce using rule 37
	':'            reduce using rule 37
	';'            reduce using rule 37
	'<'            reduce using rule 37
	'<='           reduce using rule 37
	'=='           reduce using rule 37
	'>'            reduce using rule 37
	'>='           reduce using rule 37
	']'            reduce using rule 37
	'else'         reduce using rule 37
	'in'           reduce using rule 37
	'of'           reduce using rule 37
	'then'         reduce using rule 37
	'||'           reduce using rule 37
	'}'            reduce using rule 37
	L_PIdent       reduce using rule 37
	%eof           reduce using rule 37


State 44

	PInteger -> L_PInteger .                            (rule 41)

	'!='           reduce using rule 41
	'&&'           reduce using rule 41
	')'            reduce using rule 41
	'*'            reduce using rule 41
	'+'            reduce using rule 41
	'++'           reduce using rule 41
	','            reduce using rule 41
	'-'            reduce using rule 41
	'->'           reduce using rule 41
	'/'            reduce using rule 41
	':'            reduce using rule 41
	';'            reduce using rule 41
	'<'            reduce using rule 41
	'<='           reduce using rule 41
	'=='           reduce using rule 41
	'>'            reduce using rule 41
	'>='           reduce using rule 41
	']'            reduce using rule 41
	'else'         reduce using rule 41
	'in'           reduce using rule 41
	'of'           reduce using rule 41
	'then'         reduce using rule 41
	'||'           reduce using rule 41
	'}'            reduce using rule 41
	L_PIdent       reduce using rule 41
	%eof           reduce using rule 41


State 45

	Exp15 -> String .                                   (rule 79)

	'!='           reduce using rule 79
	'&&'           reduce using rule 79
	')'            reduce using rule 79
	'*'            reduce using rule 79
	'+'            reduce using rule 79
	'++'           reduce using rule 79
	','            reduce using rule 79
	'-'            reduce using rule 79
	'/'            reduce using rule 79
	':'            reduce using rule 79
	';'            reduce using rule 79
	'<'            reduce using rule 79
	'<='           reduce using rule 79
	'=='           reduce using rule 79
	'>'            reduce using rule 79
	'>='           reduce using rule 79
	']'            reduce using rule 79
	'else'         reduce using rule 79
	'in'           reduce using rule 79
	'of'           reduce using rule 79
	'then'         reduce using rule 79
	'||'           reduce using rule 79
	'}'            reduce using rule 79
	L_PIdent       reduce using rule 79
	%eof           reduce using rule 79


State 46

	Exp15 -> PIdent .                                   (rule 78)
	Exp15 -> PIdent . '(' ListExp ')'                   (rule 81)

	'!='           reduce using rule 78
	'&&'           reduce using rule 78
	'('            shift, and enter state 170
	')'            reduce using rule 78
	'*'            reduce using rule 78
	'+'            reduce using rule 78
	'++'           reduce using rule 78
	','            reduce using rule 78
	'-'            reduce using rule 78
	'/'            reduce using rule 78
	':'            reduce using rule 78
	';'            reduce using rule 78
	'<'            reduce using rule 78
	'<='           reduce using rule 78
	'=='           reduce using rule 78
	'>'            reduce using rule 78
	'>='           reduce using rule 78
	']'            reduce using rule 78
	'else'         reduce using rule 78
	'in'           reduce using rule 78
	'of'           reduce using rule 78
	'then'         reduce using rule 78
	'||'           reduce using rule 78
	'}'            reduce using rule 78
	L_PIdent       reduce using rule 78
	%eof           reduce using rule 78


State 47

	Exp15 -> PInteger .                                 (rule 75)
